@@ -7,6 +7,7 @@
 
 - Support JSON output with `--script` with `infinit-drive --list`.
 - Support JSON output with `--script` with `infinit-network --list`.
+- Support JSON output with `--script` with `infinit-passport --list`.
 
 ## [0.5.5] - 2016-04-25
 
